refactor(service): unify validation, exceptions and style across all services
• Replaced IllegalArgumentException → EntityNotFoundException / ValidationException
• Normalized input strings (trim + null checks)
• Added consistent Javadoc for all service interfaces and implementations
• Unified error messages and validation rules
• Standardized CREATE / UPDATE / DELETE sections in service impls
• Returned safe submission-check logic in QuizSubmissionService (variant #2)
• Improved clarity of business validation across modules (Quiz, Lesson, Module, Tags, Course, Profile, Enrollment, Assignment, Submission)